popular courses added

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,22 @@ body {
     font-size: 18px;
 }
 
+/* popular courses */
+
+.course-header {
+    padding-top: 100px;
+}
+.course-card {
+    width: 540px;
+}
+.price {
+    color: #289BDE;
+    font-size: 18px;
+}
+.card-img {
+    width: 100%;
+}
+
 /* Media queries for mobile*/
 
 @media only screen and (max-width: 576px) {
@@ -46,6 +62,9 @@ body {
     }
     .register-btn {
         display: none;
+    }
+    .card-img {
+        width: 100%;
     }
 }
 
@@ -59,6 +78,9 @@ body {
         display: block;
         margin-right: 20px;
     }
+    .course-card {
+        width: 100%;
+    }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
@@ -69,11 +91,30 @@ body {
         display: block;
         margin-right: 20px;
     }
+    .course-card {
+        width: 100%;
+    }
 }
 
 /* Media queries for laptop*/
 
-@media only screen and (min-width: 993px) and (max-width: 1400px) {
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+    .register-btn {
+        display: none;
+    }
+    .course-card {
+        width: 100%;
+    }
+}
+
+/* Media queries for desktop*/
+
+@media only screen and (min-width: 1201px) and (max-width: 1400px) {
+    .register-btn {
+        display: none;
+    }
+}
+@media only screen and (min-width: 1401px) and (max-width: 2000px) {
     .register-btn {
         display: none;
     }
