--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,20 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
-.register-btn, .register-btn-2 {
+
+.register-btn,
+.register-btn-2 {
     color: #289BDE;
     border-color: #289BDE;
     font-size: 18px;
 }
+
 .carousel-item img {
     width: 100%;
     height: 600px;
     object-fit: cover;
 }
+
 .carousel-caption {
     position: absolute;
     top: 0;
@@ -19,20 +23,24 @@ body {
     right: 0;
     background: rgba(29, 29, 29, 0.70);
 }
+
 .carousel-content {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.carousel-content > h5 {
+
+.carousel-content>h5 {
     font-size: 55px;
     padding-bottom: 20px;
 }
-.carousel-content > p {
+
+.carousel-content>p {
     padding-bottom: 15px;
 }
-.carousel-content > button {
+
+.carousel-content>button {
     background: #289BDE;
     padding: 13px 33px;
     font-size: 18px;
@@ -43,56 +51,123 @@ body {
 .course-header {
     padding-top: 100px;
 }
+
 .course-card {
     width: 540px;
 }
+
 .price {
     color: #289BDE;
     font-size: 18px;
 }
+
 .card-img {
     width: 100%;
 }
 
+/* elarning institute */
+
+.elearning {
+    margin-top: 130px;
+    background: #F4FAFD;
+}
+.elearning-img , .elearning-content {
+    width: 50%;
+}
+
+.statistics {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+
 /* Media queries for mobile*/
 
 @media only screen and (max-width: 576px) {
-    .carousel-content > h5 {
+    .carousel-content>h5 {
         font-size: 30px;
     }
+
     .register-btn {
         display: none;
     }
+
     .card-img {
         width: 100%;
+    }
+    .elearning {
+        margin-top: 50px;
+    }
+    .elearning-img , .elearning-content {
+        width: 100%;
+    }
+    .ellipsis-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+    }
+    .statistics {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 /* Media queries for tablet*/
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
-    .carousel-content > h5 {
+    .carousel-content>h5 {
         font-size: 40px;
     }
+
     .register-btn {
         display: block;
         margin-right: 20px;
     }
+
     .course-card {
         width: 100%;
+    }
+
+    .elearning-img > img {
+        width: 100%;
+    }
+    .elearning-img , .elearning-content {
+        width: 100%;
+    }
+    .ellipsis-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+    }
+    .statistics {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
-    .carousel-content > h5 {
+    .carousel-content>h5 {
         font-size: 50px;
     }
+
     .register-btn {
         display: block;
         margin-right: 20px;
     }
+
     .course-card {
         width: 100%;
+    }
+    .elearning-img > img {
+        height: 475px;
+    }
+    .elearning-img {
+        width: 30%;
+    }
+   .elearning-content {
+        width: 70%;
     }
 }
 
@@ -102,11 +177,9 @@ body {
     .register-btn {
         display: none;
     }
+
     .course-card {
         width: 425px;
-    }
-    .card-img {
-        height: 205px;
     }
 }
 
@@ -117,6 +190,7 @@ body {
         display: none;
     }
 }
+
 @media only screen and (min-width: 1401px) and (max-width: 2000px) {
     .register-btn {
         display: none;
