--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,17 @@ body {
     color: white;
     outline: 1px solid white;
 }
+
+/* successfull students */
+
+.student-card h5 {
+    font-size: 16px;
+    font-weight: 600;
+}
+.student-card p {
+    font-size: 12px;
+}
+
 /* Media queries for mobile*/
 
 @media only screen and (max-width: 576px) {
