--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,12 @@ body {
     width: 70%;
 }
 
+/* trusted companies */
+.companies img {
+    aspect-ratio: 2/3;
+    object-fit: contain;
+    margin-top: -100px;
+}
 /* Media queries for mobile*/
 
 @media only screen and (max-width: 576px) {
