--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,8 @@ body {
 .companies img {
     aspect-ratio: 2/3;
     object-fit: contain;
-    margin-top: -100px;
+    margin-top: -70px;
+    height: 200px;
 }
 /* Media queries for mobile*/
 
@@ -172,6 +173,9 @@ body {
     }
     .accordion {
         width: 100%;
+    }
+    .trusted-companies {
+        display: none;
     }
 }
 
@@ -216,6 +220,9 @@ body {
     .accordion {
         width: 100%;
     }
+    .trusted-companies {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
@@ -245,6 +252,9 @@ body {
     }
     .accordion {
         width: 100%;
+    }
+    .trusted-companies {
+        display: none;
     }
 }
 
