--- a/styles/style.css
+++ b/styles/style.css
@@ -55,12 +55,16 @@ body {
 .course-card {
     width: 540px;
 }
-.course-card P {
+
+.card-title {
+    font-size: 20px;
+}
+.card-text {
     font-size: 14px;
 }
 .price {
     color: #289BDE;
-    font-size: 18px;
+    font-size: 16px; 
 }
 
 .card-img {
@@ -135,6 +139,16 @@ body {
     margin-top: -70px;
     height: 200px;
 }
+
+/* footer */
+footer p {
+    font-size: 14px;
+}
+.social-icons i {
+    background: #242424;
+    border-radius: 40px;
+    padding: 10px;
+}
 /* Media queries for mobile*/
 
 @media only screen and (max-width: 576px) {
@@ -166,6 +180,9 @@ body {
         grid-template-columns: repeat(2, 1fr);
     }
     .ready-to-join {
+        text-align: center;
+    }
+    .student-card {
         text-align: center;
     }
     .feedback {
@@ -278,7 +295,7 @@ body {
     }
 }
 
-@media only screen and (min-width: 1401px) and (max-width: 2000px) {
+@media only screen and (min-width: 1401px) and (max-width: 3000px) {
     .register-btn {
         display: none;
     }
